--- a/app/src/main/res/layout/fragment_today.xml
+++ b/app/src/main/res/layout/fragment_today.xml
@@ -19,8 +19,8 @@
 
 
         <variable
-            name="today"
-            type="com.tlgbltcn.app.weather.model.today.Today"/>
+            name="todayEntity"
+            type="com.tlgbltcn.app.weather.db.entities.TodayEntity"/>
 
         <variable
             name="resources"
