--- a/app/src/main/res/layout/fragment_today.xml
+++ b/app/src/main/res/layout/fragment_today.xml
@@ -6,8 +6,9 @@
 
     <data>
 
-        <import type="com.android.example.github.vo.Resource"/>
-        <import type="com.android.example.github.vo.Status"/>
+        <import type="com.tlgbltcn.app.weather.service.Resource" />
+
+        <import type="com.tlgbltcn.app.weather.service.Status" />
 
         <variable
             name="viewModel"
@@ -52,6 +53,13 @@
             android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            app:unixDateTime="@{todayEntity.dt}" />
 
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
