--- a/app/src/main/res/layout/fragment_yesterday.xml
+++ b/app/src/main/res/layout/fragment_yesterday.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="com.tlgbltcn.app.weather.ui.main.fragment.fifteendays.FifteenDaysViewModel" />
+            type="com.tlgbltcn.app.weather.ui.fragment.fifteendays.FifteenDaysViewModel" />
 
     </data>
 
