--- a/app/src/main/res/layout/fragment_today.xml
+++ b/app/src/main/res/layout/fragment_today.xml
@@ -29,38 +29,38 @@
 
     </data>
 
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/ll_today"
         android:layout_width="match_parent"
         android:background="@color/colorPrimary"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <androidx.cardview.widget.CardView
-
-            app:cardBackgroundColor="@android:color/transparent"
-            android:layout_margin="4dp"
-            app:cardElevation="2dp"
-            app:cardCornerRadius="4dp"
-            android:layout_width="match_parent"
-            android:layout_height="340dp">
-
-        </androidx.cardview.widget.CardView>
-
 
         <ProgressBar
-            app:visibleGone="@{resources.data == null}"
-            android:layout_gravity="center"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-
-        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            app:unixDateTime="@{todayEntity.dt}" />
+            android:layout_gravity="center"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:visibleGone="@{resources.data == null}" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/weather_status_icon"
+            android:layout_width="160dp"
+            android:layout_height="160dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="32dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:setWeatherImage="@{todayEntity.weather[0].icon}" />
 
 
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
